kubernetes/cka/practice_test_network_policies/mysql-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: mysql
  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: internal
    ports:
    - port: 3306
      protocol: TCP
